5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1643_2443.log
== TEST (2019-04-15 18:42:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio do tanque:"))
x=float(input("altura:"))
opcao=onput()
vol_esf=((4*pi*(r**3))/3)
calota=((pi*(x**2)*(r*3-x))/3)
if(opcao=="1"):
	v= calota
else:
	v=vol_esf -calota
print(round(v,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    opcao=onput()
NameError: name 'onput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:42:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio do tanque:"))
x=float(input("altura:"))
opcao=onput()
vol_esf=((4*pi*(r**3))/3)
calota=((pi*(x**2)*(r*3-x))/3)
if(opcao=="1"):
	v= calota
else:
	v=vol_esf -calota
print(round(v,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    opcao=onput()
NameError: name 'onput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:43:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio do tanque:"))
x=float(input("altura:"))
opcao=input()
vol_esf=((4*pi*(r**3))/3)
calota=((pi*(x**2)*(r*3-x))/3)
if(opcao=="1"):
	v= calota
else:
	v=vol_esf -calota
print(round(v,4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:43:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r=float(input("raio do tanque:"))
x=float(input("altura:"))
opcao=input()
vol_esf=((4*pi*(r**3))/3)
calota=((pi*(x**2)*(r*3-x))/3)
if(opcao=="1"):
	v= calota
else:
	v=vol_esf -calota
print(round(v,4))
-- EXECUTION TIME:
0.146717
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
